--- a/config/application.yaml
+++ b/config/application.yaml
@@ -16,3 +16,7 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     open-in-view: false
     generate-ddl: true
+
+server:
+  port:
+    8081
